--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device width">
         <title>Benjamin Simeon | WDD 130</title>
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header>
