--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device width">
+        <meta name="viewport" content="width=device width, initial-scale-1">
+        <meta name="description" content="Benjamin Simeon, WDD 130, profile">
+        <meta name="author" content="Benjamin Simeon">
         <title>Benjamin Simeon | WDD 130</title>
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="week02/styles/styles.css">
     </head>
     <body>
         <header>
@@ -23,6 +25,13 @@
             </p>
 
         </main>
+        <aside>
+            <h2>Perú</h2>
+            <img src="images/machu-picchu.webp" alt="Machu Picchu">
+            <p> 
+                Peru is a diverse country in South America, known for its ancient Incan history, including Machu Picchu. Its landscape ranges from the Andes mountains to the Amazon rainforest. Lima, the capital, blends colonial and modern influences, while Peruvian cuisine is celebrated globally.
+            </p>
+        </aside>
         <footer>
             <p> &copy;2024 🤖 Benjamin Simeon 🤖 Huancayo, Perú</p>
         </footer>
