--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Benjamin Simeon, WDD 130, profile">
         <meta name="author" content="Benjamin Simeon">
         <title>Benjamin Simeon | WDD 130</title>
-        <link rel="stylesheet" href="week02/styles/styles.css">
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header>
