--- a/wwr/about.html
+++ b/wwr/about.html
@@ -17,9 +17,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    <header>
-        <img src="images/logo3_200.png" alt="logo">
-        <nav>
+    <header class="header">
+        <img class="img1"  src="images/logo3_200.png" alt="logo">
+        <nav class="nav">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="trips.html">Trips</a>
@@ -28,28 +28,47 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/hero-image.webp" alt="Hero Image">
-            <h1>Mountain Rafting</h1>
-            <article class="article">
-                <img src="images/happy-client.jpg" alt="Happy Client" width="300" height="300" >
-                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt a
+            <img src="images/hero-image.jpeg" alt="Hero Image" class="img2">
+            <h1 class="tittle">Mountain Rafting</h1>
+            <article class="client">
+                <img src="images/happy-client.jpg" alt="Happy Client" >
+                <p class="p1"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt a
                     quo voluptatum, placeat accusamus rerum magni eveniet inventore perferendis!
                     Inventore suscipit id totam quod reiciendis nihil optio, architecto mollitia cum!</p>
             </article>
         </div>
-        <section>
+        <section class="container-h">
             <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt voluptates
+            <p class="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt voluptates
+                accusamus eveniet totam rem repudiandae quis enim, ipsa inventore amet maxime
+                facere illo dolores ducimus aperiam placeat, modi rerum sit!</p>
+            <img src="images/1.webp" alt="1">
+            <p class="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt voluptates
                 accusamus eveniet totam rem repudiandae quis enim, ipsa inventore amet maxime
                 facere illo dolores ducimus aperiam placeat, modi rerum sit!</p>
         </section>
-        <section>
+        <section class="adventure">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/1.webp" alt="1">
-            <img src="images/2.webp" alt="2">
-            <img src="images/3.webp" alt="3">
-            <img src="images/4.webp" alt="4">
-            <img src="images/5.jpg" alt="5">
+            <figure class="img1">
+                <img src="images/1.webp" alt="1">
+                <figcaption>Whitewater Rapids Adventure</figcaption>               
+            </figure>
+            <figure class="img2">
+                <img src="images/2.webp" alt="2">
+                <figcaption>Kayak Expedition</figcaption>
+            </figure>
+            <figure class="img3">
+                <img src="images/3.webp" alt="3">
+                <figcaption>Sunset Lake Paddle</figcaption>
+            </figure>
+            <figure class="img4">
+                <img src="images/4.jpg" alt="4">
+                <figcaption>Mangrove Exploration</figcaption>
+            </figure>
+            <figure class="img5">
+                <img src="images/5.jpg" alt="5">
+                <figcaption>Island Tour</figcaption>
+            </figure>    
         </section>    
     </main>
 
