--- a/wwr/about.html
+++ b/wwr/about.html
@@ -21,7 +21,7 @@
         <img class="img1"  src="images/logo3_200.png" alt="logo">
         <nav class="nav">
             <a href="index.html">Home</a>
-            <a href="about.html">About</a>
+            <a href="about-us.html">About us</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact</a>
         </nav>
