--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <nav>
                 <a href="#">Home</a>
-                <a href="wwr/about.html">Rafting Website</a>
+                <a href="wwr/about-us.html">Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
             </nav>
         </header>
